--- a/Manhinhungdung_AnhVu_2348/app/src/main/AndroidManifest.xml
+++ b/Manhinhungdung_AnhVu_2348/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_App">
         <activity
+            android:name=".ManiMenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
